# BetGeniusAI

./: .env.example  .env.sportsdata  .main.py.C_fPXlpyb-whfGSPGPpCY~  .replit  ACCURACY_EXPECTATIONS_V2.md  ACCURATE_PERFORMANCE_SUMMARY.md  ANSWER_YOUR_QUESTIONS.md  API_DOCS.md  API_TRANSPARENCY_CLARIFICATION.md  API_USAGE_GUIDE.md  ARCHITECTURE_ROADMAP.md  AUTHENTIC_ODDS_PERFORMANCE_SUMMARY.md  AUTHENTIC_TRAINING_SUMMARY.md  AUTOMATED_COLLECTION_GUIDE.md  AUTOSCALE_DEPLOYMENT_GUIDE.md  AUTOSCALE_FIX_COMPLETE.md  BACKFILL_SCRIPT_ANALYSIS.md  BACKFILL_STATUS_SUMMARY.md  BETTING_INTELLIGENCE_API.md  BETTING_INTEL_IMPLEMENTATION_SUMMARY.md  BREAKTHROUGH_RESULTS.md  CATASTROPHIC_OVERFITTING_SUMMARY.md  CLEAN_DATA_RESOLUTION_SUMMARY.md  CLEAN_MODEL_VALIDATION.md  CLOSING_ODDS_COMMANDS.sh  CLOSING_ODDS_COMPLETE_GUIDE.md  CLOSING_ODDS_PRODUCTION_READY.md  CLOSING_ODDS_ROOT_CAUSE_ANALYSIS.md  CLOSING_ODDS_SETUP_GUIDE.md  CLV_API_DOCUMENTATION.md  CLV_BETTING_STRATEGY_GUIDE.md  CLV_IMPROVEMENT_STRATEGY.md  CLV_SYSTEM_DIAGNOSTIC_REPORT.md  CLV_UPGRADE_RECOMMENDATION.md  COLLECTION_STATUS_ANALYSIS.md  COMPLETE_FOOTBALL_DATA_STRATEGY.md  COMPREHENSIVE_MODEL_ASSESSMENT.md  COMPREHENSIVE_PERFORMANCE_ANALYSIS.md  COMPREHENSIVE_STATUS_REPORT.md  COMPREHENSIVE_TESTING_GUIDE.md  (+389 more)
.agents/: agent_assets_metadata.toml
.claude/: launch.json
agents/: backfill_agent.py
analysis/: eval_ev_clv.py  export_training_predictions.py  promotion_gate_checker.py  tune_tau_per_league.py
artifacts/: v3_parlay_test_results.json
attached_assets/: Pasted---1764446420535_1764446420536.txt  Pasted--BetGenius-AI-Backend-Exact-Specification-for-Replit-Project-Overview-Build-a-Pytho-1749218593525.txt  (+233 more)
models/: clv_api.py  (+93 more)
(+525 files in other folders)
