[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.9",
    "fastapi>=0.115.12",
    "numpy>=2.2.6",
    "openai>=1.84.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-jose>=3.5.0",
    "requests>=2.32.3",
    "scikit-learn>=1.7.0",
    "uvicorn>=0.34.3",
]
